# automatizacion_rrss_linkedin

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
benchmarks/editorial/: feedback_plan.json  fixtures.json  results_local_controlled.json  rubrica.md  runbook_benchmark_real.md  runbook_smoke_real.md  smoke_input.json
docs/: 00_brief_arquitectura_pre_codigo.md  01_alcance_si_no.md  02_contrato_entrada_contenido.md  03_contrato_perfil_narrativo.md  04_contrato_salida.md  05_fases_implementacion.md  06_contrato_calidad_post_linkedin.md  07_gates_futuros_v1.md  08_skills_producto_linkedin_futuras.md  09_plan_implementacion_post_planeacion.md  10_mapa_tecnico_contexto_pipeline_offline.md
docs/Control/: README.md  pivot_rumbo_producto.md  plan_saneamiento_documental.md
docs/architecture/: ADR-000_Decisiones_Tecnicas_Base.md
plans/: 001-consolidar-flujo-util-textual.md  002-saneamiento-rumbo-y-frontera-publicacion-portable.md  003-salida-externa-dry-run-sin-proveedor-real.md  004-generacion-textual-util-con-adapter-controlado.md  005-prueba-valor-flujo-textual-local.md  006-integracion-ia-real-controlada.md  007-validacion-real-producto-textual.md  008-recuperacion-producto-completo.md  README.md
src/linkedin_content_system/: __init__.py
tests/: test_import_basico.py
tests/ai/: test_controlled_adapter.py  test_litellm_adapter.py  test_mock_adapter.py
tests/benchmark/: test_editorial_benchmark.py
tests/cli/: test_flujo_textual.py
tests/contracts/: test_cambio_contexto.py  test_compatibilidad_contexto.py  test_contratos.py  (+13 more)
(+110 files in other folders)
