[project]
name = "linkedin-content-system"
version = "0.1.0"
description = "LinkedIn automated publishing system from voice drafts"
authors = [
    { name = "Alex Suarez", email = "nalexsua75@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
