[project]
name = "linkedin-content-system"
version = "0.1.0"
description = "Portable Content Publisher for local draft generation and channel-specific publishing"
authors = [
    { name = "Alex Suarez" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
ai-real = [
    "litellm>=1.91.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]
